# esp32_project

./: .gitignore
ESP32_BadApple/: Compress.py  ESP32_BadApple.ino
ESP32_XDS_V1.5/: explain.txt  sdkconfig  sdkconfig.old
ESP32_XDS_V1.5/main/: CMakeLists.txt  main.c
SSD1306UiDemo/: SSD1306UiDemo.ino  images.h
Sprite_draw/: Sprite_draw.ino
aliyun-mqtt/: sdkconfig  sdkconfig.old
blink/: sdkconfig
camera/: sdkconfig  sdkconfig.old
clock/: platformio.ini
clock_idf/: sdkconfig  sdkconfig.old
clock_rtos/: clock_rtos.ino
control_menu/: control_menu.ino
cpp/: CMakeLists.txt  Makefile  myapp
dht11/: sdkconfig
drawXBitmap/: drawXBitmap.ino  p1.h  p2.h  p4.h
esp32-TFT/: README.en.md  README.md
esp_http_client/: sdkconfig  sdkconfig.old
hello_world/: sdkconfig  sdkconfig.old
ili9314_hmi/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
ili9314_hmi/main/: CMakeLists.txt  gpio.c  http_time.c  music.c  pwm.c  storage.c  task_mag.c  wifi.c  wifi_scan.c
ili9314_hmi/main/desktop/: flower.c  leaf.c  logo.c  sky.c
ili9314_hmi/main/inc/: color.h  gpio.h  http_time.h  main.h  main_page.h  music.h  music_page.h  setting_page.h  storage.h  task_mag.h  weather_page.h  wifi_scan.h  wifi_scan_page.h
ili9314_hmi/main/page/: main_page.c  music_page.c  setting_page.c  weather_page.c  wifi_scan_page.c
img/: img.ino
led_display/: led_display.ino
ledc/: sdkconfig
ledc_sg90/: sdkconfig
lv_port_esp32/: .gitmodules  CMakeLists.txt
lv_port_esp32/main/: CMakeLists.txt  gui.c  iboxchain-logo.c  main.c  smart_config.c  sntp_time.c  storage.c  weather.c  wifi.c
lv_port_esp32/main/assets/: 1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  humidity.c  idea.c  idea1.c  idea2.c  taikongren01.c  taikongren02.c  taikongren03.c  taikongren04.c  taikongren05.c  taikongren06.c  taikongren07.c  taikongren08.c  taikongren09.c  taikongren10.c  taikongren11.c  taikongren12.c  taikongren13.c  taikongren14.c  taikongren15.c
lv_port_esp32/main/font/: dig.c  dig_30.c  dig_40.c  dig_60.c  dig_80.c  fz_22.c  modi_40.c  modi_80.c  myfont_3500hz_18.c  yellow_candy_40.c  yellow_candy_80.c
lv_port_esp32/main/inc/: event.h  gui.h  sntp_time.h  storage.h  weather.h
lv_port_esp32/main/page/: root.html
sdmmc/: sdkconfig  (+1 more)
(+206 files in other folders)
