idf_component_register(SRCS "main.c"
                            "pwm.c"
                            "storage.c"
                            "gui.c"
                            "wifi.c"
                            "sntp_time.c"
                            "weather.c"
                       INCLUDE_DIRS "" "inc")
